<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:transitionName="passBt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/approval_opinions"
            android:textSize="16sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/approvalOpinion_tv"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_bg_white"
        android:gravity="top"
        android:hint="@string/input_approval_opinions"
        android:maxLength="300"
        android:padding="10dp"
        android:textSize="14sp">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/select_next_reviewer"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/details_line_color_fine" />

    <LinearLayout
        android:id="@+id/select_people_ll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_bg_white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/select_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/click_for_choice"
            android:textSize="12sp" />
    </LinearLayout>


    <Button
        android:id="@+id/commit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_selector"
        android:padding="1dp"
        android:text="@string/commit"
        android:textColor="@color/color_white"
        android:textSize="21sp" />

</LinearLayout>