<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:id="@+id/img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_avatar" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/img"
            android:orientation="vertical"
            android:textColor="@color/details_text_color_left">


            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="江炼用车申请"
                android:textColor="@color/details_text_color_left"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="phone:152666666666"
                android:textColor="@color/custom_actionBar"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/orgName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="公司:52公司"
                android:textColor="@color/details_text_color_left"
                android:textSize="14sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/shape_bg_approve_yes"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="已审批"
            android:textColor="@color/color_white"
            android:textSize="16sp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/custom_actionBar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="start"
            android:text="@string/number"
            android:textColor="@color/details_text_color_left"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="52-clwx/bysq-20200002"
            android:textColor="@color/details_text_color_right"
            android:textSize="15sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/details_line_color_fine" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="start"
            android:text="@string/Initiating_post"
            android:textColor="@color/details_text_color_left"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/jobName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="前端开发"
            android:textColor="@color/details_text_color_right"
            android:textSize="15sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/details_line_color_fine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="start"
            android:text="@string/Unit_name"
            android:textColor="@color/details_text_color_left"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/unitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="钢材网络分公司"
            android:textColor="@color/details_text_color_right"
            android:textSize="15sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/details_line_color_fine" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="start"
            android:text="@string/Department_name"
            android:textColor="@color/details_text_color_left"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/departmentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="钢材网络开发部"
            android:textColor="@color/details_text_color_right"
            android:textSize="15sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/details_line_color_fine" />


</LinearLayout>